--- a/makahiki/static/less/widget-my-achievements.less
+++ b/makahiki/static/less/widget-my-achievements.less
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 
-.date-column {
-    width: 10%;
+.achievement-date-column {
+    width: 15%;
 }
 
-.content-column {
-    width: 74%;
+.achievement-content-column {
+    width: 65%;
 }
 
 .Empty-List {
