--- a/makahiki/static/less/widget-my-commitments.less
+++ b/makahiki/static/less/widget-my-commitments.less
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+.content-column {
+  width: 80%;
+}
+
 .my-commitments-contents p {
   text-align: center;
 }
